<resources>
    <string name="app_name">ProjectCitra</string>
    <string name="upload_image">Upload Image</string>
    <string name="grayscale">Grayscale</string>
    <string name="thresholding">Thresholding</string>
    <string name="gaussian_blur">Gaussian Blur</string>
    <string name="backup">Backup</string>
    <string name="show_histogram">Show Histogram</string>
    <string name="canny_edge_detectection">Canny Edge Detectection</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="save_image">Save Image</string>
</resources>
