<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/backup"
        android:icon="@drawable/ic_settings_backup_restore_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/backup"/>

    <item
        android:id="@+id/histogram"
        android:icon="@drawable/ic_show_chart_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/show_histogram"/>

    <item
        android:id="@+id/save_image"
        android:icon="@drawable/ic_save_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/save_image"
        />
    <item
        android:id="@+id/upload_image"
        android:icon="@drawable/ic_image_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/upload_image"/>

</menu>