<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageEdited"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:src="@drawable/no_image"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:max="125"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_grayscale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/grayscale"/>

                <Button
                    android:id="@+id/btn_thresholding"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thresholding"/>

                <Button
                    android:id="@+id/btn_gaussianblur"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gaussian_blur" />
                <Button
                    android:id="@+id/btn_canny_edgedetection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/canny_edge_detectection"/>
                <Button
                    android:id="@+id/btn_brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/brightness"/>

                <Button
                    android:id="@+id/btn_contrast"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/contrast"/>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</LinearLayout>